# SoftRenderer

./: .clang-format  .gitignore  CMakeLists.txt
Source/: CoreDefines.h  CoreTypes.h  Main.cpp
Source/Containers/: Container.cpp  Container.h
Source/Devices/: Mouse.cpp  Mouse.h
Source/Engine/: Engine.cpp  Engine.h
Source/Geometry/: BoundingBox.cpp  BoundingBox.h  Geometry.h  Mesh.cpp  Mesh.h  ObjParser.cpp  ObjParser.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h
Source/Material/: Material.cpp  Material.h  Texture.cpp  Texture.h
Source/Math/: Color.cpp  Color.h  Math.h  MathSSE.cpp  MathSSE.h  Matrix.h  Vector.h  Vector2.h  Vector4.h
Source/RayTracing/: BoundingVolumeHierarchy.cpp  BoundingVolumeHierarchy.h  HitResult.h  RTPrimitive.cpp  RTPrimitive.h  Ray.h  Scene.cpp  Scene.h
Source/Render/: Camera.h  Light.h  Primitive.cpp  RasterizationRenderer.cpp  RasterizationRenderer.h  Renderer.h  Shader.cpp  Window.cpp  Window.h
Source/Render/Rasterization/: Primitive.cpp  Primitive.h  RasterizationRenderer.cpp  RasterizationRenderer.h  Shader.cpp  Shader.h
Source/Render/RayTracing/: RayTracingRenderer.cpp  RayTracingRenderer.h
